No description, normal push

--- a/index.html
+++ b/index.html
@@ -39,21 +39,87 @@
 
     <main>
         <div class="outstanding-blogs">
-            <article class="outstanding-blog one">
-                <header class="outstanding-big-title">
-                    <h2 class="header">UI cheat sheet: Spacing friendships</h2>
-                    <div class="tags">
-                        <span>Diseño</span>
-                        <span>Espaciado</span>
-                    </div>
-                </header>
-                    <img src="/src/images/line-spacing.webp" class="image" alt="">
+            <article class="article-blog one percent66">
+                <div class="left">
+                    <header class="article-title">
+                        <h2 class="header">UI cheat sheet: Spacing friendships</h2>
+                    </header>
+                    <section class="information">
+                        <div class="tags">
+                            <span class="tag">Diseño</span>
+                            <span class="tag">Espaciado</span>
+                        </div>
+                        <div class="paragraph">
+                            Para mí, la forma más fácil de ver la habilidad de un diseñador de interfaces es cómo utiliza el espaciado en su diseño. El color, la tipografía, las imágenes, etc., suelen venir dados en una guía de marca, pero utilizar correctamente el espaciado es una habilidad. Después de un tiempo se convierte en algo natural, pero sólo después de haber aprendido y utilizado las reglas básicas.
+                        </div>
+                    </section>
+                </div>
+                <img src="/src/images/spacing.webp" class="image66" alt="">
             </article>
-            <article class="outstanding-blog two">a</article>
-            <article class="outstanding-blog three">a</article>
-            <article class="outstanding-blog four">a</article>
+            <article class="article-blog two percent33">
+                <!-- <div class="left"> -->
+                    <img src="/src/images/line-spacing.webp" class="image33" alt="">
+                    <header class="article-title">
+                        <h2 class="header">UI cheat sheet: Spacing friendships</h2>
+                    </header>
+                    <section class="information">
+                        <div class="tags">
+                            <span class="tag">Diseño</span>
+                            <span class="tag">Espaciado</span>
+                        </div>
+                        <div class="paragraph">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi eaque, similique rem dolorum velit cupiditate necessitatibus minima porro. Facilis, omnis. Hic provident sequi ipsam, laborum asperiores blanditiis! Natus, ducimus reprehenderit.
+                        </div>
+                    </section>
+                <!-- </div> -->
+            </article>
+            <article class="article-blog three percent33">
+                <!-- <div class="left"> -->
+                    <img src="/src/images/line-spacing.webp" class="image33" alt="">
+                    <header class="article-title">
+                        <h2 class="header">UI cheat sheet: Spacing friendships</h2>
+                    </header>
+                    <section class="information">
+                        <div class="tags">
+                            <span class="tag">Diseño</span>
+                            <span class="tag">Espaciado</span>
+                        </div>
+                        <div class="paragraph">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi eaque, similique rem dolorum velit cupiditate necessitatibus minima porro. Facilis, omnis. Hic provident sequi ipsam, laborum asperiores blanditiis! Natus, ducimus reprehenderit.
+                        </div>
+                    </section>
+                <!-- </div> -->
+            </article>
+            <article class="article-blog four percent66">
+                <img src="/src/images/line-spacing.webp" class="image66" alt="">
+                <div class="left">
+                    <header class="article-title">
+                        <h2 class="header">UI cheat sheet: Spacing friendships</h2>
+                    </header>
+                    <section class="information">
+                        <div class="tags">
+                            <span class="tag">Diseño</span>
+                            <span class="tag">Espaciado</span>
+                        </div>
+                        <div class="paragraph">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi eaque, similique rem dolorum velit cupiditate necessitatibus minima porro. Facilis, omnis. Hic provident sequi ipsam, laborum asperiores blanditiis! Natus, ducimus reprehenderit.
+                        </div>
+                    </section>
+                </div>
+            </article>
         </div>
     </main>
+
+    <section>
+        <article>a</article>
+        <article>a</article>
+        <article>a</article>
+        <article>a</article>
+        <article>a</article>
+        <article>a</article>
+        <article>a</article>
+        <article>a</article>
+    </section>
 
 
 
