--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- Mini-reset -->
-    <link rel="stylesheet" href="src/styles/minireset.min.css">
     <!-- Styles -->
     <link rel="stylesheet" href="src/styles/main.scss">
     
@@ -38,7 +36,7 @@
     </div>
 
     <main>
-        <div class="outstanding-blogs">
+        <div class="principal-blogs">
             <article class="article-blog one percent66">
                 <div class="left">
                     <header class="article-title">
@@ -110,18 +108,207 @@
         </div>
     </main>
 
-    <section>
-        <article>a</article>
-        <article>a</article>
-        <article>a</article>
-        <article>a</article>
-        <article>a</article>
-        <article>a</article>
-        <article>a</article>
-        <article>a</article>
+    <section class="secondary-blogs">
+        <article class="item">
+            <img src="src/images/secondary-header.img.png" alt="" width="200" height="200" class="image">
+            <div class="information">
+                <header>
+                    <h2>Title</h2>
+                    <span>[Esto]</span>
+                    <span>[Otro]</span>
+                </header>
+                <section>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.!</p>
+                </section>
+                <footer>
+                    <span>by <a href="">Pepe</a></span>
+                </footer>
+            </div>
+        </article>
+        <article class="item">
+            <img src="src/images/secondary-header.img.png" alt="" width="200" height="200" class="image">
+            <div class="information">
+                <header>
+                    <h2>Title</h2>
+                    <span>[Esto]</span>
+                    <span>[Otro]</span>
+                </header>
+                <section>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.!</p>
+                </section>
+                <footer>
+                    <span>by <a href="">Pepe</a></span>
+                </footer>
+            </div>
+        </article>        
+        <article class="item">
+            <img src="src/images/secondary-header.img-2.png" alt="" width="200" height="200" class="image">
+            <div class="information">
+                <header>
+                    <h2>Title</h2>
+                    <span>[Esto]</span>
+                    <span>[Otro]</span>
+                </header>
+                <section>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.!</p>
+                </section>
+                <footer>
+                    <span>by <a href="">Pepe</a></span>
+                </footer>
+            </div>
+        </article>       
+        <article class="item">
+            <img src="src/images/secondary-header.img.png" alt="" width="200" height="200" class="image">
+            <div class="information">
+                <header>
+                    <h2>Title</h2>
+                    <span>[Esto]</span>
+                    <span>[Otro]</span>
+                </header>
+                <section>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.!</p>
+                </section>
+                <footer>
+                    <span>by <a href="">Pepe</a></span>
+                </footer>
+            </div>
+        </article>        
+        <article class="item">
+            <img src="src/images/secondary-header.img-2.png" alt="" width="200" height="200" class="image">
+            <div class="information">
+                <header>
+                    <h2>Title</h2>
+                    <span>[Esto]</span>
+                    <span>[Otro]</span>
+                </header>
+                <section>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.!</p>
+                </section>
+                <footer>
+                    <span>by <a href="">Pepe</a></span>
+                </footer>
+            </div>
+        </article>        
+        <article class="item">
+            <img src="src/images/secondary-header.img.png" alt="" width="200" height="200" class="image">
+            <div class="information">
+                <header>
+                    <h2>Title</h2>
+                    <span>[Esto]</span>
+                    <span>[Otro]</span>
+                </header>
+                <section>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.!</p>
+                </section>
+                <footer>
+                    <span>by <a href="">Pepe</a></span>
+                </footer>
+            </div>
+        </article>        
+        <article class="item">
+            <img src="src/images/secondary-header.img-2.png" alt="" width="200" height="200" class="image">
+            <div class="information">
+                <header>
+                    <h2>Title</h2>
+                    <span>[Esto]</span>
+                    <span>[Otro]</span>
+                </header>
+                <section>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.!</p>
+                </section>
+                <footer>
+                    <span>by <a href="">Pepe</a></span>
+                </footer>
+            </div>
+        </article>        
+        <article class="item">
+            <img src="src/images/secondary-header.img.png" alt="" width="200" height="200" class="image">
+            <div class="information">
+                <header>
+                    <h2>Title</h2>
+                    <span>[Esto]</span>
+                    <span>[Otro]</span>
+                </header>
+                <section>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.!</p>
+                </section>
+                <footer>
+                    <span>by <a href="">Pepe</a></span>
+                </footer>
+            </div>
+        </article>        
+        <article class="item">
+            <img src="src/images/secondary-header.img-2.png" alt="" width="200" height="200" class="image">
+            <div class="information">
+                <header>
+                    <h2>Title</h2>
+                    <span>[Esto]</span>
+                    <span>[Otro]</span>
+                </header>
+                <section>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.!</p>
+                </section>
+                <footer>
+                    <span>by <a href="">Pepe</a></span>
+                </footer>
+            </div>
+        </article>
     </section>
 
+    <article class="popular-blogs">
+        <header class="">
+            <h3>Publicaciones populares</h3>
+        </header>
 
+        <div class="container-popular-blogs">
+            <section class="popular-blog">
+                <img src="https://placehold.co/400" alt="" class="image-popular">
+                <h4>Un título super largo</h4>
+                <span>By <a href="#">Pepe</a></span>
+            </section>
+            <section class="popular-blog">
+                <img src="https://placehold.co/400" alt="" class="image-popular">                <h4>Un título super largo</h4>
+                <span>By <a href="#">Pepe</a></span>
+            </section>
+            <section class="popular-blog">
+                <img src="https://placehold.co/400" alt="" class="image-popular">                <h4>Un título super largo</h4>
+                <span>By <a href="#">Pepe</a></span>
+            </section>
+            <section class="popular-blog">
+                <img src="https://placehold.co/400" alt="" class="image-popular">                <h4>Un título super largo</h4>
+                <span>By <a href="#">Pepe</a></span>
+            </section>
+        </div>
+
+    </article>
+
+    <footer class="principal-footer">
+        <h3>Entra para recibir notificaciones</h3>
+        <span>Obten acceso exclusivo para X cosa, solo debes proporcionar tu correo eléctronico</span>
+        <input type="email">
+        <button type="submit">Suscribirse</button>
+    </footer>
+    <footer class="secondary-footer">
+        <div class="secondary-container-footer">
+            <div class="link">
+                <ul class="link-list">
+                    <li>Inicio</li>
+                    <li>Acerca de</li>
+                    <li>Compañeros</li>
+                    <li>Advertencias</li>
+                    <li>Contact</li>
+                </ul>
+            </div>
+            <div class="social-media">
+                <ul class="social-medio-list">
+                    <li>Facebook</li>
+                    <li>Instagram</li>
+                    <li>Discord</li>
+                    <li>GitHub</li>
+                </ul>
+            </div>
+        </div>
+    </footer>
 
 </body>
 </html>
