--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,11 +8,12 @@
 
     <!-- Styles -->
     <link rel="stylesheet" href="src/styles/main.scss">
-    
+
     <!-- Font family -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap"
+        rel="stylesheet">
 
 
     <!-- Title + Favicon -->
@@ -19,15 +21,19 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 
 </head>
+
 <body>
 
     <header class="principal-header">
-        <ul class="ul-principal-header">
-            <li><a href="#" class="principal-header-hyperlink" target="_blank">Programación</a></li>
-            <li><a href="#" class="principal-header-hyperlink" target="_blank">Tips</a></li>
-            <li><a href="#" target="_blank"><img src="src/images/shev-shelio.png" width="100" class="icon-principal-header" alt="CAMBIAR IMAGEN"></a></li>
-            <li><a href="#" class="principal-header-hyperlink" target="_blank">Diseño</a></li>
-            <li><a href="#" class="principal-header-hyperlink" target="_blank">SEO</a></li>
+        <ul class="principal-list-header">
+            <li><a href="#" class="hyperlink-principal-header" target="_blank">Programación</a></li>
+            <li><a href="#" class="hyperlink-principal-header" target="_blank">Tips</a></li>
+
+            <li><a href="#" target="_blank"><img src="src/images/shev-shelio.png" class="icon-principal-header"
+                        alt="Icono del blog"></a></li>
+
+            <li><a href="#" class="hyperlink-principal-header" target="_blank">Diseño</a></li>
+            <li><a href="#" class="hyperlink-principal-header" target="_blank">SEO</a></li>
         </ul>
     </header>
     <div class="secondary-header">
@@ -35,77 +41,123 @@
         <h2 class="secondary-title">Diseños de páginas web</h2>
     </div>
 
-    <main>
-        <div class="principal-blogs">
-            <article class="article-blog one percent66">
-                <div class="left">
+    <main class="principal-blogs">
+        <article class="article-blog">
+            <div class="article-content">
+                <div class="body-content">
                     <header class="article-title">
-                        <h2 class="header">UI cheat sheet: Spacing friendships</h2>
+                        <h2 class="article-title-text">UI cheat sheet: Spacing friendships</h2>
                     </header>
                     <section class="information">
                         <div class="tags">
                             <span class="tag">Diseño</span>
                             <span class="tag">Espaciado</span>
                         </div>
-                        <div class="paragraph">
-                            Para mí, la forma más fácil de ver la habilidad de un diseñador de interfaces es cómo utiliza el espaciado en su diseño. El color, la tipografía, las imágenes, etc., suelen venir dados en una guía de marca, pero utilizar correctamente el espaciado es una habilidad. Después de un tiempo se convierte en algo natural, pero sólo después de haber aprendido y utilizado las reglas básicas.
+                        <div class="paragraphs">
+                            <p class="paragraph">
+                                Para mí, la forma más fácil de ver la habilidad de un diseñador de interfaces es cómo utiliza el
+                                espaciado en su diseño. El color, la tipografía, las imágenes, etc., suelen venir dados en una guía
+                                de marca, pero utilizar correctamente el espaciado es una habilidad. Después de un tiempo se
+                                convierte en algo natural, pero sólo después de haber aprendido y utilizado las reglas básicas.
+                            </p>
                         </div>
                     </section>
                 </div>
+                <footer class="footer-content">
+                    <span>By <a href="#">Autor</a></span>
+                </footer>
+            </div>
+            <div class="article-image">
                 <img src="/src/images/spacing.webp" class="image66" alt="">
-            </article>
-            <article class="article-blog two percent33">
-                <!-- <div class="left"> -->
-                    <img src="/src/images/line-spacing.webp" class="image33" alt="">
+            </div>
+        </article>
+        <article class="article-blog">
+            <div class="article-content">
+                <div class="container-container">
                     <header class="article-title">
-                        <h2 class="header">UI cheat sheet: Spacing friendships</h2>
+                        <h2 class="article-title-text">UI cheat sheet: Spacing friendships</h2>
                     </header>
                     <section class="information">
                         <div class="tags">
                             <span class="tag">Diseño</span>
                             <span class="tag">Espaciado</span>
                         </div>
-                        <div class="paragraph">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi eaque, similique rem dolorum velit cupiditate necessitatibus minima porro. Facilis, omnis. Hic provident sequi ipsam, laborum asperiores blanditiis! Natus, ducimus reprehenderit.
-                        </div>
-                    </section>
-                <!-- </div> -->
-            </article>
-            <article class="article-blog three percent33">
-                <!-- <div class="left"> -->
-                    <img src="/src/images/line-spacing.webp" class="image33" alt="">
-                    <header class="article-title">
-                        <h2 class="header">UI cheat sheet: Spacing friendships</h2>
-                    </header>
-                    <section class="information">
-                        <div class="tags">
-                            <span class="tag">Diseño</span>
-                            <span class="tag">Espaciado</span>
-                        </div>
-                        <div class="paragraph">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi eaque, similique rem dolorum velit cupiditate necessitatibus minima porro. Facilis, omnis. Hic provident sequi ipsam, laborum asperiores blanditiis! Natus, ducimus reprehenderit.
-                        </div>
-                    </section>
-                <!-- </div> -->
-            </article>
-            <article class="article-blog four percent66">
-                <img src="/src/images/line-spacing.webp" class="image66" alt="">
-                <div class="left">
-                    <header class="article-title">
-                        <h2 class="header">UI cheat sheet: Spacing friendships</h2>
-                    </header>
-                    <section class="information">
-                        <div class="tags">
-                            <span class="tag">Diseño</span>
-                            <span class="tag">Espaciado</span>
-                        </div>
-                        <div class="paragraph">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi eaque, similique rem dolorum velit cupiditate necessitatibus minima porro. Facilis, omnis. Hic provident sequi ipsam, laborum asperiores blanditiis! Natus, ducimus reprehenderit.
+                        <div class="paragraphs">
+                            <p class="paragraph">
+                                Para mí, la forma más fácil de ver la habilidad de un diseñador de interfaces es cómo utiliza el
+                                espaciado en su diseño. El color, la tipografía, las imágenes, etc., suelen venir dados en una guía
+                                de marca, pero utilizar correctamente el espaciado es una habilidad. Después de un tiempo se
+                                convierte en algo natural, pero sólo después de haber aprendido y utilizado las reglas básicas.
+                            </p>
                         </div>
                     </section>
                 </div>
-            </article>
-        </div>
+                <footer>
+                    <span>By <a href="#">Autor</a></span>
+                </footer>
+            </div>
+            <div class="article-image">
+                <img src="/src/images/spacing.webp" class="image66" alt="">
+            </div>
+        </article>
+        <article class="article-blog">
+            <div class="article-content">
+                <div class="container-container">
+                    <header class="article-title">
+                        <h2 class="article-title-text">UI cheat sheet: Spacing friendships</h2>
+                    </header>
+                    <section class="information">
+                        <div class="tags">
+                            <span class="tag">Diseño</span>
+                            <span class="tag">Espaciado</span>
+                        </div>
+                        <div class="paragraphs">
+                            <p class="paragraph">
+                                Para mí, la forma más fácil de ver la habilidad de un diseñador de interfaces es cómo utiliza el
+                                espaciado en su diseño. El color, la tipografía, las imágenes, etc., suelen venir dados en una guía
+                                de marca, pero utilizar correctamente el espaciado es una habilidad. Después de un tiempo se
+                                convierte en algo natural, pero sólo después de haber aprendido y utilizado las reglas básicas.
+                            </p>
+                        </div>
+                    </section>
+                </div>
+                <footer>
+                    <span>By <a href="#">Autor</a></span>
+                </footer>
+            </div>
+            <div class="article-image">
+                <img src="/src/images/spacing.webp" class="image66" alt="">
+            </div>
+        </article>
+        <article class="article-blog">
+            <div class="article-content">
+                <div class="container-container">
+                    <header class="article-title">
+                        <h2 class="article-title-text">UI cheat sheet: Spacing friendships</h2>
+                    </header>
+                    <section class="information">
+                        <div class="tags">
+                            <span class="tag">Diseño</span>
+                            <span class="tag">Espaciado</span>
+                        </div>
+                        <div class="paragraphs">
+                            <p class="paragraph">
+                                Para mí, la forma más fácil de ver la habilidad de un diseñador de interfaces es cómo utiliza el
+                                espaciado en su diseño. El color, la tipografía, las imágenes, etc., suelen venir dados en una guía
+                                de marca, pero utilizar correctamente el espaciado es una habilidad. Después de un tiempo se
+                                convierte en algo natural, pero sólo después de haber aprendido y utilizado las reglas básicas.
+                            </p>
+                        </div>
+                    </section>
+                </div>
+                <footer>
+                    <span>By <a href="#">Autor</a></span>
+                </footer>
+            </div>
+            <div class="article-image">
+                <img src="/src/images/spacing.webp" class="image66" alt="">
+            </div>
+        </article>
     </main>
 
     <section class="secondary-blogs">
@@ -140,7 +192,7 @@
                     <span>by <a href="">Pepe</a></span>
                 </footer>
             </div>
-        </article>        
+        </article>
         <article class="item">
             <img src="src/images/secondary-header.img-2.png" alt="" width="200" height="200" class="image">
             <div class="information">
@@ -156,7 +208,7 @@
                     <span>by <a href="">Pepe</a></span>
                 </footer>
             </div>
-        </article>       
+        </article>
         <article class="item">
             <img src="src/images/secondary-header.img.png" alt="" width="200" height="200" class="image">
             <div class="information">
@@ -172,7 +224,7 @@
                     <span>by <a href="">Pepe</a></span>
                 </footer>
             </div>
-        </article>        
+        </article>
         <article class="item">
             <img src="src/images/secondary-header.img-2.png" alt="" width="200" height="200" class="image">
             <div class="information">
@@ -188,7 +240,7 @@
                     <span>by <a href="">Pepe</a></span>
                 </footer>
             </div>
-        </article>        
+        </article>
         <article class="item">
             <img src="src/images/secondary-header.img.png" alt="" width="200" height="200" class="image">
             <div class="information">
@@ -204,7 +256,7 @@
                     <span>by <a href="">Pepe</a></span>
                 </footer>
             </div>
-        </article>        
+        </article>
         <article class="item">
             <img src="src/images/secondary-header.img-2.png" alt="" width="200" height="200" class="image">
             <div class="information">
@@ -220,7 +272,7 @@
                     <span>by <a href="">Pepe</a></span>
                 </footer>
             </div>
-        </article>        
+        </article>
         <article class="item">
             <img src="src/images/secondary-header.img.png" alt="" width="200" height="200" class="image">
             <div class="information">
@@ -236,7 +288,7 @@
                     <span>by <a href="">Pepe</a></span>
                 </footer>
             </div>
-        </article>        
+        </article>
         <article class="item">
             <img src="src/images/secondary-header.img-2.png" alt="" width="200" height="200" class="image">
             <div class="information">
@@ -267,15 +319,18 @@
                 <span>By <a href="#">Pepe</a></span>
             </section>
             <section class="popular-blog">
-                <img src="https://placehold.co/400" alt="" class="image-popular">                <h4>Un título super largo</h4>
+                <img src="https://placehold.co/400" alt="" class="image-popular">
+                <h4>Un título super largo</h4>
                 <span>By <a href="#">Pepe</a></span>
             </section>
             <section class="popular-blog">
-                <img src="https://placehold.co/400" alt="" class="image-popular">                <h4>Un título super largo</h4>
+                <img src="https://placehold.co/400" alt="" class="image-popular">
+                <h4>Un título super largo</h4>
                 <span>By <a href="#">Pepe</a></span>
             </section>
             <section class="popular-blog">
-                <img src="https://placehold.co/400" alt="" class="image-popular">                <h4>Un título super largo</h4>
+                <img src="https://placehold.co/400" alt="" class="image-popular">
+                <h4>Un título super largo</h4>
                 <span>By <a href="#">Pepe</a></span>
             </section>
         </div>
@@ -311,4 +366,5 @@
     </footer>
 
 </body>
+
 </html>
