--- a/index.html
+++ b/index.html
@@ -75,19 +75,17 @@
             <div class="article-content">
                 <div class="container-container">
                     <header class="article-title">
-                        <h2 class="article-title-text">UI cheat sheet: Spacing friendships</h2>
+                        <h2 class="article-title-text">How to Design a Product in 5 Steps
+                        </h2>
                     </header>
                     <section class="information">
                         <div class="tags">
                             <span class="tag">Diseño</span>
-                            <span class="tag">Espaciado</span>
+                            <span class="tag">Producto</span>
                         </div>
                         <div class="paragraphs">
                             <p class="paragraph">
-                                Para mí, la forma más fácil de ver la habilidad de un diseñador de interfaces es cómo utiliza el
-                                espaciado en su diseño. El color, la tipografía, las imágenes, etc., suelen venir dados en una guía
-                                de marca, pero utilizar correctamente el espaciado es una habilidad. Después de un tiempo se
-                                convierte en algo natural, pero sólo después de haber aprendido y utilizado las reglas básicas.
+                                La calidad del diseño va más allá de ofrecer una interfaz visualmente atractiva; tiene un impacto directo en el éxito comercial del producto. Según McKinsey & Company, el uso de métodos de pensamiento de diseño conduce a un aumento del 35% en los ingresos. También provoca un aumento del rendimiento del 56% en comparación con las empresas que dejan el diseño del producto en un segundo plano. Pero, ¿qué se necesita para hacer "bien" el diseño de productos?
                             </p>
                         </div>
                     </section>
@@ -97,26 +95,23 @@
                 </footer>
             </div>
             <div class="article-image">
-                <img src="/src/images/spacing.webp" class="image66" alt="">
+                <img src="/src/images/steps-to-design-a-product.webp" class="image66" alt="">
             </div>
         </article>
         <article class="article-blog">
             <div class="article-content">
                 <div class="container-container">
                     <header class="article-title">
-                        <h2 class="article-title-text">UI cheat sheet: Spacing friendships</h2>
+                        <h2 class="article-title-text">UI Design for Developers</h2>
                     </header>
                     <section class="information">
                         <div class="tags">
                             <span class="tag">Diseño</span>
-                            <span class="tag">Espaciado</span>
+                            <span class="tag">Desarrollo</span>
                         </div>
                         <div class="paragraphs">
                             <p class="paragraph">
-                                Para mí, la forma más fácil de ver la habilidad de un diseñador de interfaces es cómo utiliza el
-                                espaciado en su diseño. El color, la tipografía, las imágenes, etc., suelen venir dados en una guía
-                                de marca, pero utilizar correctamente el espaciado es una habilidad. Después de un tiempo se
-                                convierte en algo natural, pero sólo después de haber aprendido y utilizado las reglas básicas.
+                                Los desarrolladores de interfaz de usuario desempeñan un papel vital en la usabilidad, la intuitividad y el rendimiento de un producto digital. "Los diseñadores de UX tienen cero control sobre la UX entregada a los usuarios pero 100% de responsabilidad. Los ingenieros tienen cero responsabilidad sobre la UX entregada a los usuarios pero 100% de control". Erica Rider, UX Lead EPX en PayPal Entender los principios de diseño de la interfaz de usuario, la experiencia (...)
                             </p>
                         </div>
                     </section>
@@ -126,14 +121,15 @@
                 </footer>
             </div>
             <div class="article-image">
-                <img src="/src/images/spacing.webp" class="image66" alt="">
+                <img src="/src/images/ui-for-developers.webp" class="image66" alt="">
             </div>
         </article>
         <article class="article-blog">
             <div class="article-content">
                 <div class="container-container">
                     <header class="article-title">
-                        <h2 class="article-title-text">UI cheat sheet: Spacing friendships</h2>
+                        <h2 class="article-title-text">HTML Line Spacing: The Fine Line Between Good and Bad UX Design
+                        </h2>
                     </header>
                     <section class="information">
                         <div class="tags">
@@ -142,10 +138,7 @@
                         </div>
                         <div class="paragraphs">
                             <p class="paragraph">
-                                Para mí, la forma más fácil de ver la habilidad de un diseñador de interfaces es cómo utiliza el
-                                espaciado en su diseño. El color, la tipografía, las imágenes, etc., suelen venir dados en una guía
-                                de marca, pero utilizar correctamente el espaciado es una habilidad. Después de un tiempo se
-                                convierte en algo natural, pero sólo después de haber aprendido y utilizado las reglas básicas.
+                                El interlineado HTML -el espacio vertical entre dos líneas de texto dentro de un párrafo- no es lo más emocionante en el mundo del diseño de UX, pero importa más de lo que crees. Este elemento de estilo está relacionado con la estrategia de experiencia y el diseño de interacción, dos de los cuatro cuadrantes de diseño de UX que se utilizan para crear una experiencia de usuario increíble. Pero va mucho más allá.
                             </p>
                         </div>
                     </section>
@@ -155,7 +148,7 @@
                 </footer>
             </div>
             <div class="article-image">
-                <img src="/src/images/spacing.webp" class="image66" alt="">
+                <img src="/src/images/line-spacing.webp" class="image66" alt="">
             </div>
         </article>
     </main>
